# watch_me_front

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  tailwind.css
assets/: tailwind.css
docs/: index.html
docs/assets/: tailwind-dxhe3f0141f91cd979.css  watch_me_front-dxh342e98a9d5c4bcb.js  watch_me_front-dxh39d9ea5d437574b6.js  watch_me_front-dxh4f49211c60344bd4.js  watch_me_front-dxh55d89b659f442b61.js  watch_me_front-dxh8b318c7c7bf3258.js  watch_me_front-dxh9cb4d650dda544ee.js  watch_me_front-dxha2728486a2b53.js  watch_me_front-dxhb3ad79634771b06.js  watch_me_front_bg-dxh12f89f11adcf57.wasm  watch_me_front_bg-dxh2da4d220494eb791.wasm  watch_me_front_bg-dxh38a82b8301ad5bc.wasm  watch_me_front_bg-dxh54b73fdecee5f6a9.wasm  watch_me_front_bg-dxhd73c6832625f32c.wasm  watch_me_front_bg-dxhdb5b4177849cd7a.wasm  watch_me_front_bg-dxhe3c44c268f8ad3b.wasm  watch_me_front_bg-dxhe8414ee52a9e1441.wasm
src/: main.rs
src/domain/: diet.rs  food_log.rs  ingredient.rs  ingredient_category.rs  mod.rs  user.rs  weight_entry.rs
src/services/: auth.rs  user.rs
src/ui/components/: navbar.rs
src/ui/pages/: account.rs  home.rs  login.rs  mod.rs  register.rs
src/ui/state/: app.rs
