[package]
name = "watch_me_front"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["router", "web"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
wasm-bindgen-futures = "0.4"
uuid = { version = "1.19.0", features = ["serde"] }
